--- a/src/scss/includes/base/mixins.scss
+++ b/src/scss/includes/base/mixins.scss
@@ -73,3 +73,12 @@
 		@content;
 	}
 }
+
+// Apply styles to the last row of grid elements depends on columns number
+
+@mixin last-grid-row($columns) {
+	&:nth-child(#{$columns}n+1):nth-last-child(-n+#{$columns}),
+	&:nth-child(#{$columns}n+1):nth-last-child(-n+#{$columns}) ~ * {
+		@content;
+	}
+}
