--- a/src/scss/includes/blocks/about-us.scss
+++ b/src/scss/includes/blocks/about-us.scss
@@ -15,7 +15,7 @@
 	}
 
 	h2 {
-		font: 300 34px/41px $font-MessinaSans;
+		font: 200 34px/41px $font-MessinaSans;
 		letter-spacing: -1.3px;
 		margin: 0 0 24px;
 
@@ -66,7 +66,6 @@
 
 	&-slide {
 		margin: 0 4px;
-		cursor: pointer;
 		pointer-events: none;
 		//max-width: 278px;
 		//min-width: 278px; /* remove after js */
@@ -94,6 +93,7 @@
 			height: 0;
 			border-radius: 4px;
 			overflow: hidden;
+			cursor: pointer;
 
 			.slide-center & {
 				opacity: 1;
@@ -159,6 +159,20 @@
 					font-size: 17px;
 					line-height: 25px;
 				}
+			}
+		}
+
+		&-position {
+			display: block;
+		}
+
+		&-name,
+		&-company {
+			cursor: pointer;
+			transition: color 0.3s ease;
+
+			&:hover {
+			  color: $color-red;
 			}
 		}
 
