--- a/src/scss/includes/blocks/hero.scss
+++ b/src/scss/includes/blocks/hero.scss
@@ -1,16 +1,16 @@
 .hero {
 	position: relative;
 	width: 100%;
-	height: calc(100vh + 1px);
+	height: calc(100vh + 10px);
 	align-items: center;
 	background: #242528;
 	display: flex;
 	justify-content: center;
-	padding: 0 0 85px;
+	padding: 0 0 130px;
 	text-align: center;
 	opacity: 0;
 	visibility: hidden;
-	transition: all 0.3s ease-in-out;
+	transition: all 0.4s ease-in-out;
 
 	&-logo {
 		margin: 0 0 60px;
@@ -18,7 +18,7 @@
 
 	h1 {
 		color: #fff;
-		font: 300 44px/52px $font-MessinaSans;
+		font: 200 44px/52px $font-MessinaSans;
 		letter-spacing: -1.3px;
 		font-weight: 200;
 		margin: 0;
@@ -30,30 +30,46 @@
 			max-width: 840px;
 		}
 
+
+		br {
+			display: block;
+
+			@include desktop {
+				display: none;
+			}
+		}
+	}
+
+
+	.hero-ticker {
+		position: relative;
+		display: inline;
+
 		span {
 			color: $color-red;
 			font-family: $font-MessinaSansSerif;
 			font-style: italic;
-			margin-left: 10px;
+			margin-left: 0;
 			font-weight: 200;
-		}
 
-		div {
-			display: inline;
+			@include desktop {
+				margin-left: 10px;
+			}
 		}
 	}
 
 	&-scroll {
 		align-items: center;
-		bottom: 80px;
+		bottom: 100px;
 		cursor: pointer;
 		display: flex;
-		left: calc(50% - 16px);
+		left: 50%;
 		justify-content: center;
 		height: 32px;
 		position: absolute;
 		background-color: transparent;
 		border: none;
+		transform: translateX(-50%);
 
 		@include tablet {
 			bottom: 40px;
@@ -87,18 +103,22 @@
 		}
 	}
 
-	.hero-ticker {
-		position: relative;
-	}
-
 	.typed-cursor {
-    position: absolute;
-    right: -3px;
-    top: 50%;
-    font-size: 0;
-    height: 88%;
-    width: 1px;
-    transform: translateY(-50%);
-    background-color: currentColor;
+		position: relative;
+		color: transparent !important;
+		width: 1px;
+		overflow: hidden;
+		margin-left: 0 !important;
+
+		&::before {
+		  content: '';
+			position: absolute;
+			left: 5px;
+			top: 50%;
+			height: 80%;
+			width: 1px;
+			background-color: $color-red;
+			transform: translateY(-50%);
+		}
 	}
 }
