--- a/src/scss/includes/blocks/press.scss
+++ b/src/scss/includes/blocks/press.scss
@@ -1,9 +1,9 @@
 .press {
 	background: #fff;
-	padding: 0 0 56px;
+	padding: 80px 0 56px;
 
 	@include desktop {
-		padding: 0 0 120px;
+		padding: 96px 0 120px;
 	}
 
 	&-wrapper {
@@ -46,10 +46,10 @@
 		img {
 			bottom: 10px;
 			display: block;
-			height: auto;
-			max-width: 100px;
-			max-height: 26px;
-			width: auto;
+			width: 100px;
+			height: 26px;
+			object-fit: contain;
+			object-position: bottom right;
 			position: absolute;
 			right: -2px;
 		}
