--- a/src/scss/includes/blocks/ticker.scss
+++ b/src/scss/includes/blocks/ticker.scss
@@ -25,18 +25,19 @@
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   animation-name: ticker;
-  animation-duration: 90s;
 
   @include desktop {
     padding: 22px 0 18px;
   }
 
   li {
-    font: 14px/20px $font-MessinaSans;
+    font-size: 14px;
+    line-height: 20px;
+    font-family: $font-MessinaSans;
     letter-spacing: -0.01em;
     margin: 0 30px 0 0;
     transition: 0s;
-
+    -webkit-text-size-adjust: 100%;
     display: inline-block;
 
     @include desktop {
