--- a/src/scss/includes/blocks/modal.scss
+++ b/src/scss/includes/blocks/modal.scss
@@ -139,6 +139,23 @@
 			}
 		}
 
+		.field-wrapper-bottom {
+			display: flex;
+			flex-direction: column-reverse;
+
+			@include mobile {
+				align-items: center;
+				flex-direction: row;
+				justify-content: space-between;
+			}
+
+			p {
+				@include mobile {
+					margin-bottom: 0;
+				}
+			}
+		}
+
 		.btn {
 			background-color: #000;
 			color: #fff;
