--- a/src/scss/includes/blocks/modal.scss
+++ b/src/scss/includes/blocks/modal.scss
@@ -287,10 +287,10 @@
 			.image-wrapper {
 				position: relative;
 				width: 100%;
-				padding-bottom: 82%;
+				// padding-bottom: 82%;
 			}
 
-			img {
+			.img {
 				display: block;
 				position: absolute;
 				top: 0;
