--- a/src/scss/includes/blocks/modal.scss
+++ b/src/scss/includes/blocks/modal.scss
@@ -290,7 +290,7 @@
 				// padding-bottom: 82%;
 			}
 
-			.img {
+			img, .img {
 				display: block;
 				position: absolute;
 				top: 0;
@@ -347,7 +347,7 @@
 				height: auto;
 			}
 
-			img {
+			img, .img {
 				display: block;
 				height: 100%;
 				max-width: 100%;
@@ -476,7 +476,7 @@
 				height: auto;
 			}
 
-			.img {
+			img, .img {
 				display: block;
 				height: 100%;
 				max-width: 100%;
