--- a/src/scss/templates/news.scss
+++ b/src/scss/templates/news.scss
@@ -115,7 +115,7 @@
 			&-img {
 				padding: 0 0 15px;
 
-				.img {
+				img, .img {
 					display: block;
 					height: auto;
 					max-width: 100%;
