--- a/src/scss/includes/blocks/about-us.scss
+++ b/src/scss/includes/blocks/about-us.scss
@@ -1,9 +1,9 @@
 .about-us {
-	padding: 80px 0 24px;
+	padding: 80px 0 0; // 24px;
 	text-align: center;
 
 	@include desktop {
-		padding: 150px 0 90px;
+		padding: 150px 0 0; // 90px;
 	}
 
 	.container {
@@ -179,11 +179,11 @@
 		border-top: 1px solid #D7D7D7;
 		display: flex;
 		flex-wrap: wrap;
-		padding: 36px 0 0;
+		padding: 36px 0 24px;
 		text-align: center;
 
 		@include desktop {
-			padding: 53px 15px 0;
+			padding: 53px 15px 90px;
 		}
 	}
 
