--- a/src/scss/includes/blocks/ticker.scss
+++ b/src/scss/includes/blocks/ticker.scss
@@ -16,7 +16,7 @@
 
 .ticker {
   overflow: hidden;
-  padding: 24px 0 17px;
+  padding: 24px 0 16.4px;
   transition: 0s;
   white-space: nowrap; /* remove after js */
 
@@ -37,7 +37,7 @@
     letter-spacing: -0.01em;
     margin: 0 30px 0 0;
     transition: 0s;
-    -webkit-text-size-adjust: 100%;
+    -webkit-text-size-adjust: none;
     display: inline-block;
 
     @include desktop {
