--- a/src/scss/includes/blocks/ticker.scss
+++ b/src/scss/includes/blocks/ticker.scss
@@ -8,6 +8,7 @@
   padding-left: 100%;
   width: 100%;
   box-sizing: content-box;
+  height: 72px;
 }
 
 .ticker.ticker-pr-100 {
@@ -16,7 +17,7 @@
 
 .ticker {
   overflow: hidden;
-  padding: 24px 0 16.4px;
+  padding: 24px 0 24px;
   transition: 0s;
   white-space: nowrap; /* remove after js */
 
@@ -37,7 +38,7 @@
     letter-spacing: -0.01em;
     margin: 0 30px 0 0;
     transition: 0s;
-    -webkit-text-size-adjust: none;
+    -webkit-text-size-adjust: 100%;
     display: inline-block;
 
     @include desktop {
