--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -94,7 +94,7 @@
 
 		&-email {
 			color: #fff;
-			display: flex;
+			display: inline-flex;
 			font: 18px/24px $font-MessinaSans;
 			margin: 15px 0 6px;
 			font-weight: 300;
