--- a/src/scss/includes/blocks/about-us.scss
+++ b/src/scss/includes/blocks/about-us.scss
@@ -14,6 +14,10 @@
 		}
 	}
 
+	> .container .btn {
+		margin-top: 40px;
+	}
+
 	h2 {
 		font: 200 34px/41px $font-MessinaSans;
 		letter-spacing: -1.3px;
