--- a/src/scss/includes/blocks/about-us.scss
+++ b/src/scss/includes/blocks/about-us.scss
@@ -16,6 +16,21 @@
 
 	> .container .btn {
 		margin-top: 40px;
+		border: none;
+		width: auto;
+		min-width: 280px;
+		max-width: none;
+		white-space: nowrap;
+		font-size: 15px;
+		line-height: 18px;
+		font-weight: 600;
+		letter-spacing: -0.01em;
+
+		@include tablet {
+			min-width: 240px;
+			font-size: 17px;
+			line-height: 25px;
+		}
 	}
 
 	h2 {
