--- a/src/scss/includes/blocks/modal.scss
+++ b/src/scss/includes/blocks/modal.scss
@@ -663,3 +663,177 @@
 		opacity: 0.75;
 	}
 }
+
+.home-modal {
+	&__overlay {
+		position: fixed;
+		z-index: 500;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: #fff;
+		opacity: 0;
+		transition: all 0.4s ease-in-out;
+
+		&.show {
+			opacity: 0.8;
+		}
+	}
+
+	&__wrapper {
+		display: flex;
+		flex-direction: column;
+		position: fixed;
+		z-index: 501;
+		top: calc(50% - 24px);
+		left: calc(50% - 24px);
+		width: 960px;
+		margin: 24px;
+		max-width: calc(100% - 48px);
+		max-height: calc(100vh - 48px);
+		overflow: hidden;
+		background-color: #fff;
+		border: 1px solid #000;
+		box-sizing: border-box;
+		border-radius: 8px;
+		transform: translate(-50%, -50%);
+		opacity: 0;
+		transition: all 0.4s ease-in-out;
+
+		&.show {
+			opacity: 1;
+		}
+	}
+
+	&__inside {
+		display: flex;
+		flex-wrap: wrap;
+		overflow-y: auto;
+		max-height: 100%;
+
+		@include tablet {
+			max-height: none;
+		}
+	}
+
+	&__image,
+	&__content {
+		flex: 1 1 100%;
+		max-width: 100%;
+	}
+
+	&__image {
+		position: relative;
+		height: 0;
+		padding-bottom: 60%;
+
+		@include tablet {
+			position: relative;
+			flex: 1 1 37.5%;
+			max-width: 37.5%;
+			height: auto;
+			padding-bottom: 0;
+			border-right: 1px solid #000;
+			filter: drop-shadow(0px 6px 18px rgba(0, 0, 0, 0.07));
+		}
+
+		img {
+			position: absolute;
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+
+	&__content {
+		padding: 25px 15px;
+		overflow-y: auto;
+
+		@include tablet {
+			flex: 1 1 62.5%;
+			max-width: 62.5%;
+			max-height: calc(100vh - 48px);
+			padding: 50px 15.3% 32px 5%;
+		}
+
+		@include desktop {
+			padding-top: 100px;
+		}
+
+		p, a {
+			font-size: 15px;
+			line-height: 23px;
+			letter-spacing: -0.01em;
+
+			@include tablet {
+				font-size: 17px;
+				line-height: 20px;
+				letter-spacing: -0.03em;
+			}
+		}
+
+		a {
+			color: $color-red;
+
+			&:hover {
+			  color: $color-black;
+			}
+		}
+	}
+
+	&__title {
+		margin-bottom: 25px;
+		font-weight: 300;
+		font-size: 27px;
+		line-height: 32px;
+		letter-spacing: -0.02em;
+
+		@include tablet {
+			margin-bottom: 57px;
+			font-size: 40px;
+			line-height: 48px;
+			letter-spacing: -0.03em;
+		}
+	}
+
+	&__logo {
+		max-width: 165px;
+		margin-bottom: 18px;
+	}
+
+	&__link {
+		margin-top: 32px;
+	}
+
+	&__close {
+		cursor: pointer;
+		display: block;
+		position: absolute;
+		right: 15px;
+		top: 15px;
+		width: 30px;
+		height: 30px;
+		background: #fff;
+		border: 1px solid #D7D7D7;
+		border-radius: 50%;
+
+		@include tablet {
+			right: 30px;
+			top: 30px;
+			width: 16px;
+			height: 16px;
+			background: transparent;
+			border: none;
+		}
+
+		> svg {
+			position: absolute;
+			width: 16px;
+			height: 16px;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+		}
+	}
+}
