update modal styles

--- a/src/scss/includes/blocks/modal.scss
+++ b/src/scss/includes/blocks/modal.scss
@@ -23,9 +23,9 @@
 		to {right: 0}
 	}
 
-	&::-webkit-scrollbar {
-		width: 0;
-	}
+	//&::-webkit-scrollbar {
+	//	width: 0;
+	//}
 
 	&.show {
 		display: flex;
