--- a/src/scss/includes/blocks/modal.scss
+++ b/src/scss/includes/blocks/modal.scss
@@ -845,7 +845,7 @@
 
 	&.home-modal--announcement {
 		.home-modal__wrapper {
-			width: 773px;
+			width: 720px;
 		}
 
 		.home-modal__close {
@@ -881,22 +881,28 @@
 			}
 
 			@include tablet {
-				flex: 1 1 31%;
-				max-width: 31%;
+				flex: 1 1 33.3%;
+				max-width: 33.3%;
 				padding-bottom: 0;
 			}
 		}
 
 		.home-modal__content {
+			padding: 38px 24px 30px;
+
 			@include tablet {
-				flex: 1 1 69%;
-				max-width: 69%;
-				padding: 64px 10% 40px 5.8%;
+				flex: 1 1 66.66%;
+				max-width: 66.66%;
+				padding: 62px 10% 38px 6.4%;
 			}
 
-			p {
+			p, a {
 				font-size: 17px;
-				line-height: 25px;
+				line-height: 20px;
+
+				@include tablet {
+					line-height: 25px;
+				}
 
 				a {
 					margin-top: 6px;
@@ -917,15 +923,21 @@
 		}
 
 		.home-modal__top {
-			margin-bottom: 50px;
+			margin-bottom: 56px;
+
+			@include tablet {
+				margin-bottom: 72px;
+			}
 		}
 
 		.home-modal__title {
-			margin-bottom: 20px;
+			margin-bottom: 17px;
 			font-size: 36px;
 			line-height: 40px;
+			letter-spacing: -0.03em;
 
 			@include tablet {
+				margin-bottom: 20px;
 				font-size: 48px;
 				line-height: 52px;
 			}
