--- a/src/scss/includes/blocks/team.scss
+++ b/src/scss/includes/blocks/team.scss
@@ -30,14 +30,11 @@
 		}
 
 		.title {
-			border-bottom: 1px solid #ededed;
-			margin-bottom: 60px;
 			padding: 0 0 60px;
 			text-align: left;
 
 			@include desktop {
-				margin-bottom: 90px;
-				padding: 0 0 90px;
+				padding: 0 0 60px;
 			}
 
 			@include tablet {
@@ -46,6 +43,16 @@
 
 			p {
 				max-width: 800px;
+			}
+
+			& + .roles {
+				padding-top: 60px;
+				border-top: 1px solid #ededed;
+
+				@include desktop {
+					padding-top: 90px;
+					margin-top: 30px;
+				}
 			}
 		}
 
