create Application modal

--- a/src/scss/includes/blocks/btn.scss
+++ b/src/scss/includes/blocks/btn.scss
@@ -44,6 +44,15 @@
 		color: #fff;
 	}
 
+	&-black {
+		background: $color-black;
+		color: #fff;
+	}
+
+	&-block {
+		width: 100%;
+	}
+
 	&-clear {
 		background: transparent;
 	}
