--- a/src/scss/includes/base/global.scss
+++ b/src/scss/includes/base/global.scss
@@ -153,6 +153,7 @@ input[type='text'],
 input[type='email'],
 input[type='tel'],
 input[type='password'],
+input[type='url'],
 textarea {
 	-webkit-appearance: none;
 	background: transparent;
