--- a/src/scss/templates/ccpa.scss
+++ b/src/scss/templates/ccpa.scss
@@ -1,7 +1,70 @@
 .ccpa {
-  padding: 80px 0;
+  padding: 120px 0;
 
   @include desktop {
     padding: 100px 0;
+  }
+
+  p, li {
+    font-family: $font-MessinaSans;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 28px;
+    letter-spacing: -0.01em;
+  }
+
+  h1 {
+    font-family: $font-MessinaSans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 35px;
+    text-align: center;
+    letter-spacing: -0.03em;
+    color: #1A1A1A;
+  }
+
+  h2 {
+    font-family: $font-MessinaSans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: -0.01em;
+    margin-bottom: 20px;
+  }
+
+  h4 {
+    font-family: $font-MessinaSansMono;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 25px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #242528;
+  }
+
+  p {
+    margin-bottom: 20px;
+  }
+
+  ul li {
+    &:not(:last-of-type) {
+      margin-bottom: 20px;
+    }
+
+    &:last-of-type {
+      margin-bottom: 32px;
+    }
+
+    &::marker {
+      font-size: 0.75em;
+    }
+  }
+
+  .text-center {
+    text-align: center;
   }
 }
